@@ -1,0 +1,15 @@
+---
+svckill::ignore_defaults:
+  - auditd
+  - puppet
+  - puppetmaster
+  - crond
+  - sshd
+  - iptables
+  - ip6tables
+  - ebtables
+  - rc
+  - ^pe-.*
+lookup_options:
+  svckill::ignore_defaults:
+    merge: unique
