@@ -1,0 +1,31 @@
+---
+svckill::ignore_defaults:
+  - amtu
+  - blk-availability
+  - dbus.*
+  - getty.*
+  - gpm
+  - haldaemon
+  - irqbalance
+  - killall
+  - libvirt-guests
+  - lvm2-monitor
+  - mcstrans
+  - mdmonitor
+  - messagebus
+  - prefdm
+  - netcf-transaction
+  - netfs
+  - netlabel
+  - network
+  - ntpdate
+  - portreserve
+  - restorecond
+  - sandbox
+  - sysstat
+  - udev-post
+  - krb524
+  - mdmpd
+  - readahead_later
+  - lm_sensors
+  - kudzu
